--- a/pi Modelo Hamburgueria/cardapio.html
+++ b/pi Modelo Hamburgueria/cardapio.html
@@ -11,11 +11,11 @@
 
     <style>
         :root {
-            --primary-color: #4f46e5;
-            --secondary-color: #6d28d9;
-            --accent-color: #f59e0b;
+            --primary-color: #f700009a;
+            --secondary-color: #ff00009a;
+            --accent-color: #000000;
             --bg-gradient: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
-            --glass-header: rgba(255, 255, 255, 0.85);
+            --glass-header: rgba(7, 0, 0, 0);
             --card-bg: #ffffff;
         }
 
@@ -37,7 +37,7 @@
 
         .loader-icon {
             font-size: 5rem;
-            color: #fbbf24; /* Cor de pão/queijo */
+            color: lch(80.68% 77.76 83.25); /* Cor de pão/queijo */
             margin-bottom: 20px;
             /* Animação composta: gira e pulsa */
             animation: burger-bounce 1.5s infinite ease-in-out;
