--- a/pi Modelo Hamburgueria/login.html
+++ b/pi Modelo Hamburgueria/login.html
@@ -335,6 +335,22 @@
 
                                     <div class="position-relative">
                                         <div class="form-floating mb-3">
+                                            <input type="text" class="form-control" id="CPFCadastro" placeholder="CPF" required>
+                                            <label for="CPFCadastro">CPF</label>
+                                        </div>
+                                        <i class="fas fa-user input-icon"></i>
+                                    </div>
+
+                                    <div class="position-relative">
+                                        <div class="form-floating mb-3">
+                                            <input type="tel" class="form-control" id="telefoneCadastro" placeholder="Telefone" required>
+                                            <label for="telefoneCadastro">Telefone</label>
+                                        </div>
+                                        <i class="fas fa-phone input-icon"></i>
+                                    </div>
+
+                                    <div class="position-relative">
+                                        <div class="form-floating mb-3">
                                             <input type="password" class="form-control" id="senhaCadastro" placeholder="Senha" required>
                                             <label for="senhaCadastro">Senha</label>
                                         </div>
