--- a/pi Modelo Hamburgueria/login.html
+++ b/pi Modelo Hamburgueria/login.html
@@ -11,9 +11,9 @@
 
     <style>
         :root {
-            --primary-color: #4f46e5;
-            --secondary-color: #6d28d9;
-            --bg-gradient: linear-gradient(135deg, #4f46e5 0%, #8b5cf6 100%);
+            --primary-color: #f700009a;
+            --secondary-color: #ff00009a;
+            --bg-gradient: linear-gradient(135deg, #f700009a 0%, #e2e8f0 100%);
             --transition-speed: 0.4s;
             --glass-bg: rgba(255, 255, 255, 0.95);
             --glass-header: rgba(255, 255, 255, 0.15);
