--- a/pi Modelo Hamburgueria/login.html
+++ b/pi Modelo Hamburgueria/login.html
@@ -13,7 +13,7 @@
         :root {
             --primary-color: #f700009a;
             --secondary-color: #ff00009a;
-            --bg-gradient: linear-gradient(135deg, #f700009a 0%, #e2e8f0 100%);
+            --bg-gradient: linear-gradient(135deg, #f315159a 0%, #af86869a 100%);
             --transition-speed: 0.4s;
             --glass-bg: rgba(255, 255, 255, 0.95);
             --glass-header: rgba(255, 255, 255, 0.15);
