--- a/pi Modelo Hamburgueria/login.html
+++ b/pi Modelo Hamburgueria/login.html
@@ -246,7 +246,7 @@
 
     <nav class="navbar navbar-expand-lg site-header fixed-top">
         <div class="container">
-            <a class="navbar-brand logo" href="index.html">
+            <a class="navbar-brand logo" href="cardapioSemLogin.html">
                 <i class="fas fa-hamburger me-2"></i>Cardápio
             </a>
 
@@ -257,7 +257,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center text-center">
                     <li class="nav-item">
-                        <a href="cardapio.html" class="nav-link-custom">Cardápio</a>
+                        <a href="cardapioSemLogin.html" class="nav-link-custom">Cardápio</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link-custom active">Login</a>
