--- a/pi Modelo Hamburgueria/cardapioSemLogin.html
+++ b/pi Modelo Hamburgueria/cardapioSemLogin.html
@@ -511,15 +511,35 @@
         </div>
     </div>
 
+    <!-- Modal - Usuário Precisa Logar -->
+    <div class="modal fade" id="loginRequiredModal" tabindex="-1" aria-labelledby="loginRequiredLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+        <div class="modal-header">
+            <h5 class="modal-title" id="loginRequiredLabel">Login necessário</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <div class="modal-body">
+            Você precisa estar logado para adicionar produtos ao carrinho.
+        </div>
+
+        <div class="modal-footer">
+            <a href="login.html" class="btn btn-primary">Fazer Login</a>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        </div>
+
+        </div>
+    </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        // --- Lógica do Carrinho ---
-        let cartCount = 0;
-        const badge = document.getElementById('cartCount');
-        
         function facaLogin() {
-            alert("Faça login para adicionar ao carrinho!")
+            var myModal = new bootstrap.Modal(document.getElementById('loginRequiredModal'));
+            myModal.show();
         }
 
         // --- Lógica de Filtros ---
