Arrumando umas coisas

--- a/pi Modelo Hamburgueria/login.html
+++ b/pi Modelo Hamburgueria/login.html
@@ -453,7 +453,7 @@
 
                     localStorage.setItem("nomeUsuario", resposta.usuario.Nome);
 
-                    window.location.href = "Teste.html";
+                    window.location.href = "cardapioLogado.html";
 
                 } else {
                     alert(resposta.mensagem);
