--- a/pi Modelo Hamburgueria/cardapioLogado.html
+++ b/pi Modelo Hamburgueria/cardapioLogado.html
@@ -366,6 +366,7 @@
             <button class="filter-btn" onclick="filterMenu('acompanhamento', this)">Acompanhamentos</button>
             <button class="filter-btn" onclick="filterMenu('bebida', this)">Bebidas</button>
             <button class="filter-btn" onclick="filterMenu('sobremesa', this)">Sobremesas</button>
+            <button class="filter-btn" onclick="filterMenu('combo', this)">Combos</button>
         </div>
 
         <div class="row g-4" id="menuContainer">
