--- a/pi Modelo Hamburgueria/cardapioLogin.html
+++ b/pi Modelo Hamburgueria/cardapioLogin.html
@@ -330,7 +330,7 @@
                         <a href="#" class="nav-link-custom active" onclick="closeMenu()">Cardápio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link-custom" onclick="closeMenu()">Sobre</a>
+                        <a href="sobre.html" class="nav-link-custom" onclick="closeMenu()">Sobre</a>
                     </li>
                     <li class="nav-item">
                         <a href="#settingsOffcanvas" onclick="closeMenu()" class="nav-link-custom" data-bs-toggle="offcanvas" data-bs-target="#settingsOffcanvas" aria-controls="settingsOffcanvas"><i class="fa-solid fa-user"></i></a>
