--- a/pi Modelo Hamburgueria/cardapioSemLogin.html
+++ b/pi Modelo Hamburgueria/cardapioSemLogin.html
@@ -330,7 +330,7 @@
                         <a href="#" class="nav-link-custom active" onclick="closeMenu()">Cardápio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link-custom" onclick="closeMenu()">Sobre</a>
+                        <a href="sobre.html" class="nav-link-custom" onclick="closeMenu()">Sobre</a>
                     </li>
                     <li class="nav-item">
                         <a href="login.html" class="nav-link-custom" onclick="closeMenu()">Login</a>
