--- a/pi Modelo Hamburgueria/public/cardapioLogado.html
+++ b/pi Modelo Hamburgueria/public/cardapioLogado.html
@@ -802,8 +802,9 @@
 </div>
 
     <script>
+        
+        // Arrumar isso aqui e colocar JWT
         const nomeCompleto = localStorage.getItem("nomeUsuario");
-
         if (!nomeCompleto) {
             // 1. O item não existe (usuário não logado)
             alert("Faça seu login para poder acessar essa página.");
