--- a/pi Modelo Hamburgueria/public/login.html
+++ b/pi Modelo Hamburgueria/public/login.html
@@ -448,6 +448,7 @@
 
                 const resposta = await res.json();
 
+                // Arrumar isso aqui e colocar JWT
                 if (res.ok) {
                     alert("Login realizado com sucesso!");
 
