--- a/pi Modelo Hamburgueria/public/login.html
+++ b/pi Modelo Hamburgueria/public/login.html
@@ -448,7 +448,7 @@
 
                 const resposta = await res.json();
 
-                // Arrumar isso aqui e colocar JWT
+                // Arrumar isso aqui e colocar JWT e colcoar apra os 3 tipos de logins
                 if (res.ok) {
                     alert("Login realizado com sucesso!");
 
