--- a/pi Modelo Hamburgueria/public/login.html
+++ b/pi Modelo Hamburgueria/public/login.html
@@ -260,7 +260,7 @@
 
     <nav class="navbar navbar-expand-lg site-header fixed-top">
         <div class="container">
-            <a class="navbar-brand logo" href="cardapioSemLogin.html">
+            <a class="navbar-brand logo" href="/cardapio-semlogin">
                 <i class="fas fa-hamburger me-2"></i>Cardápio
             </a>
 
@@ -272,10 +272,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center text-center">
                     <li class="nav-item">
-                        <a href="cardapioSemLogin.html" class="nav-link-custom">Cardápio</a>
+                        <a href="/cardapio-semlogin" class="nav-link-custom">Cardápio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link-custom active">Login</a>
+                        <a href="/sobre" class="nav-link-custom">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/login" class="nav-link-custom active">Login</a>
                     </li>
                 </ul>
             </div>
