--- a/pi Modelo Hamburgueria/public/sobre.html
+++ b/pi Modelo Hamburgueria/public/sobre.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre Nós - Hamburgueria</title>
+    <title>Sobre Nós - BurguerPI</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -12,7 +13,7 @@
             --secondary-color: #ff00009a;
             --accent-color: #000000;
             --bg-gradient: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
-            --glass: rgba(255,255,255,0.85);
+            --glass: rgba(255, 255, 255, 0.85);
         }
 
         body {
@@ -76,10 +77,19 @@
             padding: 80px 20px;
             text-align: center;
             border-radius: 0 0 30px 30px;
-            box-shadow: 0 10px 15px rgba(0,0,0,0.15);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
         }
-        .hero-sobre h1 { font-weight: 800; margin-bottom: 10px; }
-        .hero-sobre p { max-width: 700px; margin: 0 auto; opacity: 0.9; }
+
+        .hero-sobre h1 {
+            font-weight: 800;
+            margin-bottom: 10px;
+        }
+
+        .hero-sobre p {
+            max-width: 700px;
+            margin: 0 auto;
+            opacity: 0.9;
+        }
 
         /* Seção Sobre */
         .sobre-section {
@@ -89,14 +99,14 @@
         .sobre-img {
             width: 100%;
             border-radius: 20px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
         }
 
         .sobre-card {
             background: white;
             padding: 30px;
             border-radius: 20px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
         }
 
         .sobre-title {
@@ -117,9 +127,10 @@
             padding: 25px;
             border-radius: 20px;
             text-align: center;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.06);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.06);
             transition: 0.3s;
         }
+
         .value-box:hover {
             transform: translateY(-5px);
         }
@@ -139,79 +150,82 @@
         }
     </style>
 </head>
+
 <body>
 
-<header class="site-header fixed-top">
-    <nav class="container d-flex justify-content-between align-items-center"padding-top: 5px;>
-        <span class="logo">Hamburgueria</span>
+    <header class="site-header fixed-top">
+        <nav class="container d-flex justify-content-between align-items-center" style="padding-top: 5px;">
+            <a href="/cardapio-semlogin" class="logo text-decoration-none">BurguerPI</a>
 
-        <div style="display: flex; gap: 20px;">
-            <a class="nav-link-custom" href="cardapioSemLogin.html">Cardapio</a>
-            <a class="nav-link-custom active" href="sobre.html">Sobre</a>
-            <a class="nav-link-custom" href="login.html">Login</a>
-        </div>
-    </nav>
-</header>
+            <div style="display: flex; gap: 20px;">
+                <a class="nav-link-custom" href="/cardapio-semlogin">Cardápio</a>
+                <a class="nav-link-custom active" href="/sobre">Sobre</a>
+                <a class="nav-link-custom" href="/login">Login</a>
+            </div>
+        </nav>
+    </header>
 
-<section class="hero-sobre">
-    <h1>Sobre Nós</h1>
-    <p>A história da nossa paixão por hambúrguer começou pequena, mas cheia de sabor e autenticidade.</p>
-</section>
+    <section class="hero-sobre">
+        <h1>Sobre Nós</h1>
+        <p>A história da nossa paixão por hambúrguer começou pequena, mas cheia de sabor e autenticidade.</p>
+    </section>
 
-<section class="sobre-section container">
-    <div class="row align-items-center g-4">
-        <div class="col-lg-6">
-            <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1200" class="sobre-img" />
-        </div>
-        <div class="col-lg-6">
-            <div class="sobre-card">
-                <h2 class="sobre-title">Nossa Jornada</h2>
-                <p class="sobre-text">
-                    Começamos com uma ideia simples: criar hambúrgueres artesanais de verdade, com ingredientes frescos e um sabor inesquecível.
-                    Com o tempo, a nossa hamburgueria se tornou referência na região, sempre priorizando qualidade e atendimento.
-                </p>
-                <p class="sobre-text">
-                    Aqui, cada detalhe importa — do pão macio à carne suculenta, dos molhos exclusivos ao ambiente acolhedor.
-                </p>
+    <section class="sobre-section container">
+        <div class="row align-items-center g-4">
+            <div class="col-lg-6">
+                <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1200" class="sobre-img" />
+            </div>
+            <div class="col-lg-6">
+                <div class="sobre-card">
+                    <h2 class="sobre-title">Nossa Jornada</h2>
+                    <p class="sobre-text">
+                        Começamos com uma ideia simples: criar hambúrgueres artesanais de verdade, com ingredientes
+                        frescos e um sabor inesquecível.
+                        Com o tempo, a nossa hamburgueria se tornou referência na região, sempre priorizando qualidade e
+                        atendimento.
+                    </p>
+                    <p class="sobre-text">
+                        Aqui, cada detalhe importa — do pão macio à carne suculenta, dos molhos exclusivos ao ambiente
+                        acolhedor.
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="container text-center mb-5">
-    <h2 class="sobre-title">Nossos Valores</h2>
-    <div class="row g-4 mt-3">
+    <section class="container text-center mb-5">
+        <h2 class="sobre-title">Nossos Valores</h2>
+        <div class="row g-4 mt-3">
 
-        <div class="col-md-4">
-            <div class="value-box">
-                <div class="value-icon">🍔</div>
-                <h4>Qualidade</h4>
-                <p>Selecionamos cuidadosamente cada ingrediente para entregar sempre o melhor.</p>
+            <div class="col-md-4">
+                <div class="value-box">
+                    <div class="value-icon">🍔</div>
+                    <h4>Qualidade</h4>
+                    <p>Selecionamos cuidadosamente cada ingrediente para entregar sempre o melhor.</p>
+                </div>
             </div>
-        </div>
 
-        <div class="col-md-4">
-            <div class="value-box">
-                <div class="value-icon">🔥</div>
-                <h4>Autenticidade</h4>
-                <p>Receitas próprias feitas com carinho e dedicação para um sabor único.</p>
+            <div class="col-md-4">
+                <div class="value-box">
+                    <div class="value-icon">🔥</div>
+                    <h4>Autenticidade</h4>
+                    <p>Receitas próprias feitas com carinho e dedicação para um sabor único.</p>
+                </div>
             </div>
-        </div>
 
-        <div class="col-md-4">
-            <div class="value-box">
-                <div class="value-icon">🤝</div>
-                <h4>Compromisso</h4>
-                <p>Respeito, transparência e foco total na satisfação de cada cliente.</p>
+            <div class="col-md-4">
+                <div class="value-box">
+                    <div class="value-icon">🤝</div>
+                    <h4>Compromisso</h4>
+                    <p>Respeito, transparência e foco total na satisfação de cada cliente.</p>
+                </div>
             </div>
+
         </div>
+    </section>
 
-    </div>
-</section>
-
-<footer class="site-footer text-center">
-    <p>© 2025 BurgerPrime - Todos os Direitos Reservados</p>
-</footer>
-
+    <footer class="site-footer text-center">
+        <p>© 2025 BurguerPI - Todos os Direitos Reservados</p>
+    </footer>
 </body>
 </html>
