--- a/pi Modelo Hamburgueria/public/sobre.html
+++ b/pi Modelo Hamburgueria/public/sobre.html
@@ -7,32 +7,32 @@
     <title>Sobre Nós - BurguerPI</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <style>
         :root {
             --primary-color: #f700009a;
-            --secondary-color: #ff00009a;
+            --secondary-color: #ff0000;
             --accent-color: #000000;
             --bg-gradient: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
-            --glass: rgba(255, 255, 255, 0.85);
+            --glass: rgba(255, 255, 255, 0.95);
         }
 
         body {
             font-family: 'Poppins', sans-serif;
             background: #f1f5f9;
             color: #334155;
-            padding-top: 47px;
+            padding-top: 70px;
+            overflow-x: hidden;
         }
 
-        /* Header */
+        /* Header & Navbar Custom Colors */
         .site-header {
-            padding: 5px 0;
             background: var(--glass);
             backdrop-filter: blur(12px);
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
+            transition: 0.3s;
         }
 
         .logo {
@@ -44,15 +44,19 @@
         .nav-link-custom {
             color: #64748b;
             font-weight: 600;
-            margin: 0 15px;
+            margin: 5px 15px;
             text-decoration: none;
             position: relative;
+            display: inline-block;
+            transition: color 0.3s;
         }
 
-        .nav-link-custom:hover {
-            color: var(--primary-color);
+        .nav-link-custom:hover,
+        .nav-link-custom.active {
+            color: var(--secondary-color);
         }
 
+        /* Hover effect only for desktop */
         @media (min-width: 992px) {
             .nav-link-custom::after {
                 content: '';
@@ -61,171 +65,270 @@
                 height: 2px;
                 bottom: -2px;
                 left: 0;
-                background-color: var(--primary-color);
+                background-color: var(--secondary-color);
                 transition: width 0.3s;
             }
 
-            .nav-link-custom:hover::after {
+            .nav-link-custom:hover::after,
+            .nav-link-custom.active::after {
                 width: 100%;
             }
         }
 
-        /* Hero Sobre */
+        /* Hero Sobre - Adjusted for mobile */
         .hero-sobre {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            background: linear-gradient(135deg, #f70000, #b91c1c);
             color: white;
-            padding: 80px 20px;
+            padding: 60px 20px;
             text-align: center;
             border-radius: 0 0 30px 30px;
             box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
         }
 
+        @media (min-width: 768px) {
+            .hero-sobre {
+                padding: 100px 20px;
+            }
+        }
+
         .hero-sobre h1 {
             font-weight: 800;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            font-size: 2.5rem;
         }
 
         .hero-sobre p {
             max-width: 700px;
             margin: 0 auto;
-            opacity: 0.9;
+            opacity: 0.95;
+            font-size: 1.1rem;
         }
 
         /* Seção Sobre */
         .sobre-section {
-            padding: 60px 20px;
+            padding: 40px 15px;
+        }
+
+        @media (min-width: 768px) {
+            .sobre-section {
+                padding: 80px 20px;
+            }
+        }
+
+        .sobre-img-container {
+            position: relative;
+            overflow: hidden;
+            border-radius: 25px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
         }
 
         .sobre-img {
             width: 100%;
-            border-radius: 20px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+            height: auto;
+            transition: transform 0.5s;
+        }
+
+        .sobre-img-container:hover .sobre-img {
+            transform: scale(1.05);
         }
 
         .sobre-card {
             background: white;
             padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+            border-radius: 25px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+            height: 100%;
         }
 
         .sobre-title {
-            font-size: 1.8rem;
+            font-size: 2rem;
             font-weight: 700;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             color: #1e293b;
+            position: relative;
+            display: inline-block;
+        }
+
+        .sobre-title::after {
+            content: '';
+            position: absolute;
+            width: 50%;
+            height: 4px;
+            bottom: -5px;
+            left: 0;
+            background: var(--secondary-color);
+            border-radius: 2px;
         }
 
         .sobre-text {
             color: #64748b;
-            line-height: 1.7;
+            line-height: 1.8;
+            font-size: 1.05rem;
         }
 
         /* Valores */
         .value-box {
             background: white;
-            padding: 25px;
-            border-radius: 20px;
+            padding: 35px 25px;
+            border-radius: 25px;
             text-align: center;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.06);
-            transition: 0.3s;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.04);
+            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            height: 100%;
+            border: 1px solid rgba(0, 0, 0, 0.02);
         }
 
         .value-box:hover {
-            transform: translateY(-5px);
+            transform: translateY(-10px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+            border-color: rgba(247, 0, 0, 0.1);
         }
 
         .value-icon {
-            font-size: 2.2rem;
+            font-size: 3rem;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+
+        .value-box h4 {
+            font-weight: 700;
+            color: #1e293b;
             margin-bottom: 15px;
-            color: var(--primary-color);
         }
 
         /* Footer */
         .site-footer {
-            background: #1e293b;
+            background: #0f172a;
             color: #94a3b8;
-            padding: 40px 0 20px;
-            margin-top: 60px;
+            padding: 60px 0 30px;
+            margin-top: 80px;
+        }
+
+        .footer-logo {
+            color: white;
+            font-weight: 800;
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+            display: block;
+            text-decoration: none;
+        }
+
+        /* Toggler Custom */
+        .navbar-toggler {
+            border: none;
+            padding: 0;
+        }
+
+        .navbar-toggler:focus {
+            box-shadow: none;
         }
     </style>
 </head>
 
 <body>
 
-    <header class="site-header fixed-top">
-        <nav class="container d-flex justify-content-between align-items-center" style="padding-top: 5px;">
-            <a href="/cardapio-semlogin" class="logo text-decoration-none">BurguerPI</a>
+    <nav class="navbar navbar-expand-lg site-header fixed-top">
+        <div class="container">
+            <a class="navbar-brand logo" href="/cardapio-semlogin">
+                BurguerPI
+            </a>
 
-            <div style="display: flex; gap: 20px;">
-                <a class="nav-link-custom" href="/cardapio-semlogin">Cardápio</a>
-                <a class="nav-link-custom active" href="/sobre">Sobre</a>
-                <a class="nav-link-custom" href="/login">Login</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fas fa-bars fs-3" style="color: var(--secondary-color);"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <div class="navbar-nav align-items-center text-center py-3 py-lg-0">
+                    <a class="nav-link-custom" href="/cardapio-semlogin">Cardápio</a>
+                    <a class="nav-link-custom active" href="/sobre">Sobre</a>
+                    <a class="nav-link-custom" href="/login">Login</a>
+                </div>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <section class="hero-sobre">
-        <h1>Sobre Nós</h1>
-        <p>A história da nossa paixão por hambúrguer começou pequena, mas cheia de sabor e autenticidade.</p>
+        <div class="container">
+            <h1>Nossa História</h1>
+            <p>Mais do que apenas hambúrgueres, entregamos uma experiência artesanal feita com paixão em cada detalhe.
+            </p>
+        </div>
     </section>
 
     <section class="sobre-section container">
-        <div class="row align-items-center g-4">
-            <div class="col-lg-6">
-                <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1200" class="sobre-img" />
-            </div>
-            <div class="col-lg-6">
+        <div class="row align-items-center g-5">
+            <div class="col-lg-6 order-2 order-lg-1">
                 <div class="sobre-card">
                     <h2 class="sobre-title">Nossa Jornada</h2>
                     <p class="sobre-text">
-                        Começamos com uma ideia simples: criar hambúrgueres artesanais de verdade, com ingredientes
-                        frescos e um sabor inesquecível.
-                        Com o tempo, a nossa hamburgueria se tornou referência na região, sempre priorizando qualidade e
-                        atendimento.
+                        A BurguerPI nasceu da vontade de resgatar o verdadeiro sabor do hambúrguer. Sem conservantes,
+                        sem pressa, apenas ingredientes frescos selecionados todas as manhãs.
                     </p>
                     <p class="sobre-text">
-                        Aqui, cada detalhe importa — do pão macio à carne suculenta, dos molhos exclusivos ao ambiente
-                        acolhedor.
+                        Nossa cozinha é um laboratório de sabores onde testamos combinações exclusivas de blends de
+                        carne e molhos artesanais para garantir que cada mordida seja inesquecível. Desde o início,
+                        nosso foco tem sido a qualidade superior e o atendimento que faz você se sentir em casa.
                     </p>
+                </div>
+            </div>
+            <div class="col-lg-6 order-1 order-lg-2">
+                <div class="sobre-img-container">
+                    <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1200" class="sobre-img"
+                        alt="Hambúrguer Artesanal Suclulento" />
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="container text-center mb-5">
-        <h2 class="sobre-title">Nossos Valores</h2>
-        <div class="row g-4 mt-3">
+    <section class="container mb-5">
+        <div class="text-center mb-5">
+            <h2 class="sobre-title">Nossos Valores</h2>
+            <p class="text-muted">O que nos move todos os dias para entregar o melhor para você.</p>
+        </div>
 
+        <div class="row g-4">
             <div class="col-md-4">
                 <div class="value-box">
                     <div class="value-icon">🍔</div>
-                    <h4>Qualidade</h4>
-                    <p>Selecionamos cuidadosamente cada ingrediente para entregar sempre o melhor.</p>
+                    <h4>Qualidade Extrema</h4>
+                    <p class="sobre-text">Somente carnes de procedência e vegetais orgânicos entram em nossa cozinha.
+                    </p>
                 </div>
             </div>
 
             <div class="col-md-4">
                 <div class="value-box">
                     <div class="value-icon">🔥</div>
-                    <h4>Autenticidade</h4>
-                    <p>Receitas próprias feitas com carinho e dedicação para um sabor único.</p>
+                    <h4>Paixão pelo Fogo</h4>
+                    <p class="sobre-text">O preparo na grelha garante aquele sabor defumado autêntico que você ama.</p>
                 </div>
             </div>
 
             <div class="col-md-4">
                 <div class="value-box">
                     <div class="value-icon">🤝</div>
-                    <h4>Compromisso</h4>
-                    <p>Respeito, transparência e foco total na satisfação de cada cliente.</p>
+                    <h4>Comunidade</h4>
+                    <p class="sobre-text">Apoiamos produtores locais e valorizamos cada pessoa da nossa equipe.</p>
                 </div>
             </div>
-
         </div>
     </section>
 
-    <footer class="site-footer text-center">
-        <p>© 2025 BurguerPI - Todos os Direitos Reservados</p>
+    <footer class="site-footer">
+        <div class="container text-center">
+            <a href="#" class="footer-logo">BurguerPI</a>
+            <div class="mb-4">
+                <a href="#" class="text-white me-3 fs-4"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-white me-3 fs-4"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-white fs-4"><i class="fab fa-whatsapp"></i></a>
+            </div>
+            <p class="mb-0">© 2025 BurguerPI - Todos os Direitos Reservados</p>
+            <small class="text-muted">Feito com ❤️ por amantes de hambúrguer</small>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
