--- a/pi Modelo Hamburgueria/public/login.html
+++ b/pi Modelo Hamburgueria/public/login.html
@@ -409,7 +409,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p class="mb-0">&copy; 2023 Hamburgueria Artesanal. Todos os direitos reservados.</p>
+            <p class="mb-0">&copy; 2025 BurguerPI. Todos os direitos reservados.</p>
         </div>
     </footer>
 
