--- a/pi Modelo Hamburgueria/public/sobre.html
+++ b/pi Modelo Hamburgueria/public/sobre.html
@@ -12,10 +12,10 @@
 
     <style>
         :root {
-            --primary-color: #f700009a;
-            --secondary-color: #ff0000;
-            --accent-color: #000000;
-            --bg-gradient: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+            --primary-color: #D97706;
+            --secondary-color: #EA580C;
+            --accent-color: #92400E;
+            --bg-gradient: linear-gradient(135deg, #FEF3C7 0%, #f3efde 100%);
             --glass: rgba(255, 255, 255, 0.95);
         }
 
@@ -77,7 +77,7 @@
 
         /* Hero Sobre - Adjusted for mobile */
         .hero-sobre {
-            background: linear-gradient(135deg, #f70000, #b91c1c);
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
             padding: 60px 20px;
             text-align: center;
@@ -181,7 +181,7 @@
         .value-box:hover {
             transform: translateY(-10px);
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
-            border-color: rgba(247, 0, 0, 0.1);
+            border-color: rgba(217, 119, 6, 0.1);
         }
 
         .value-icon {
@@ -198,7 +198,7 @@
 
         /* Footer */
         .site-footer {
-            background: #0f172a;
+            background: #1e293b;
             color: #94a3b8;
             padding: 60px 0 30px;
             margin-top: 80px;
